--- a/CSS-my file/index.html
+++ b/CSS-my file/index.html
@@ -22,7 +22,7 @@
       <div class="profile">
         <img src="images/Seyi pic.png" height="300px" width="300px" alt="Seyi picture">
         <h2>Hello.</h2>
-        <p class="intro">I am a web and app developer. I'm the founder and CEO of 3ple-A Tech. I love taking pictures of nature and my folks.</p>
+        <p class="intro">I am a web and app developer. I'm a FrontEnd developer at 3ple-A Tech. I love taking pictures of nature and my folks.</p>
       </div>
         <hr>
       <div class="Skills">
